fix: update styles for blockquote elements to enhance dark mode support by adjusting text color for better visibility

--- a/packages/react-designer/src/styles.css
+++ b/packages/react-designer/src/styles.css
@@ -631,7 +631,7 @@
     &.node-blockquote,
     &.node-column,
     &.node-customCode {
-      @apply courier-m-0 courier-relative;
+      @apply courier-m-0 courier-relative dark:!courier-text-[#171717];
 
       /* .draggable-item {
         @apply courier-mr-10 courier-ml-4 lg:courier-ml-2 lg:courier-mr-10 courier-w-full;
